[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/GameMain/Guntret/Guntret.gd" type="Script" id=1]
[ext_resource path="res://asset/Image/Guntret/Guntret01.png" type="Texture" id=2]
[ext_resource path="res://asset/Image/Guntret/v2_Exhast02.png" type="Texture" id=3]
[ext_resource path="res://asset/Image/Guntret/Guntret03.png" type="Texture" id=4]
[ext_resource path="res://asset/Image/Guntret/Guntret02.png" type="Texture" id=5]
[ext_resource path="res://asset/Sound/Shot.wav" type="AudioStream" id=6]
[ext_resource path="res://asset/Sound/crash1.wav" type="AudioStream" id=7]
[ext_resource path="res://asset/Image/Guntret/v2_Exhast03.png" type="Texture" id=8]
[ext_resource path="res://asset/Image/Guntret/v2_Exhast01.png" type="Texture" id=9]
[ext_resource path="res://asset/Image/Guntret/v2_Exhast05.png" type="Texture" id=10]
[ext_resource path="res://asset/Image/Guntret/v2_Exhast04.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "Left",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "Right",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Top",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 3.0
height = 4.0

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 30.0
} ]

[node name="Guntret" type="Area2D"]
position = Vector2( 96, 85 )
collision_mask = 12
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Top"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[node name="Exhaust" type="AnimatedSprite" parent="."]
position = Vector2( 0, 15 )
frames = SubResource( 8 )
frame = 1
playing = true

[node name="ShotSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -8.0

[node name="CrushSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="area_entered" from="." to="." method="_on_Guntret_area_entered"]
